opam-version: "1.2"
version: "1.0"
maintainer: "lord@crocodile.org"
homepage: "https://github.com/vzaliva/otetris"
dev-repo: "https://github.com/vzaliva/otetris.git"
bug-reports: "https://github.com/vzaliva/otetris/issues"
authors: ["Vadim Zaliva"]
license: "MIT"
build: [
  ["jbuilder" "build"]
]
install: [
  ["jbuilder" "install"]
]

remove: [
  ["rm" "%{bin}%/otetris"]
  ["rm" "%{bin}%/ttetris"]
]

depends: [
  "batteries"
  "lwt"
  "lambda-term"
  "conf-sdl2-image"
  "conf-sdl2-mixer"
  "conf-sdl2-net"
  "conf-sdl2-ttf"
  "ocamlsdl"
]
  
