opam-version: "1.2"
maintainer: "lord@crocodile.org"
authors: "Vadim Zaliva"
homepage: "https://github.com/vzaliva/otetris"
bug-reports: "https://github.com/vzaliva/otetris/issues"
license: "MIT"
dev-repo: "https://github.com/vzaliva/otetris.git"
build: ["dune" "build" "-p" name "-j" jobs]
install: ["dune" "install"]
depends: [
  "dune" {build & >= "1.0"}
  "batteries"
  "lwt"
  "lambda-term"
  "conf-sdl-image"
  "conf-sdl-ttf"
  "conf-sdl-gfx"
  "conf-sdl-mixer"
  "ocamlsdl"
]
